--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Yang" />
 
     <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Flowstate" />
+    <meta property="og:title" content="SOL" />
     <meta property="og:description" content="A yingnetwork project" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://yingnetwork.online/yingnetwork.png" />
