--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta property="og:title" content="SOL" />
     <meta property="og:description" content="A yingnetwork project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://yingnetwork.online/yingnetwork.png" />
+    <meta property="og:image" content="https://yingnetwork.online/SOL.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Yang" />
-    <meta name="twitter:image" content="https://yingnetwork.online/yingnetwork.png" />
+    <meta name="twitter:image" content="https://yingnetwork.online/SOL.jpg" />
   </head>
 
   <body>
