--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <title>Sol apparel</title>
     <meta name="description" content="A yingnetwork project" />
-    <meta name="author" content="Yang" />
+    <meta name="author" content="Yang@yingnetwork.online" />
 
     
     <meta property="og:title" content="SOL" />
